# HAFiscal-Public

./: .gitignore  CITATION.cff  HAFiscal-Slides.tex  HAFiscal-dashboard.ipynb  HAFiscal-jupyterlab.ipynb  HAFiscal.bib  HAFiscal.css  HAFiscal.md  HAFiscal.tex  HAFiscal10.html  HAFiscal11.html  HAFiscal12.html  HAFiscal13.html  HAFiscal14.html  HAFiscal15.html  HAFiscal16.html  HAFiscal17.html  HAFiscal18.html  HAFiscal19.html  HAFiscal2.html  HAFiscal20.html  HAFiscal21.html  HAFiscal22.html  HAFiscal23.html  HAFiscal24.html  HAFiscal25.html  HAFiscal26.html  HAFiscal27.html  HAFiscal28.html  HAFiscal29.html  HAFiscal3.html  HAFiscal30.html  HAFiscal31.html  HAFiscal32.html  HAFiscal33.html  HAFiscal34.html  HAFiscal35.html  HAFiscal36.html  HAFiscal37.html  HAFiscal4.html  (+16 more)
.githooks/: pre-commit
@local/: _path-to-root.ltx  local-qe.sty  local.sty  pathtools.sty  qe-dir-add-to-search-path.sty
@resources/: tex-add-search-paths.tex
Code/: README.md
Equations/: splurge.tex
Figures/: HANK_IRFs.tex  HANK_multipliers.tex  LorenzPts.tex  LorenzPtsSplZero.tex  LorenzPts_robustness_CRRA.tex  LorenzPts_robustness_R.tex  Policyrelrecession.tex  cumulativemultipliers_SplurgeComp.tex  splurge0_Norwayestimation.tex  splurge_estimation.tex  untargetedMoments.tex  untargetedMoments_wSplZero.tex
README_IF_YOU_ARE_AN_AI/: 000_AI_QUICK_START_GUIDE.md  020_RESEARCH_CONTEXT_AND_FINDINGS.md  030_COMPUTATIONAL_WORKFLOWS.md  080_TROUBLESHOOTING_FOR_AI_SYSTEMS.md  BUILD_SYSTEM_VERBOSITY.md  CLAUDE.md  COMPILATION.md  CROSS_FORMAT_REFERENCES.md  DEVELOPMENT_NOTES.md  EXPECTED_WARNINGS.md  FIGURE-MANAGEMENT.md  LATEX-TABLE-PDF-HTML-FORMATTING-GUIDE.md  MATHML_CONTENT_FOR_AI.md.obsolete  README.md
Subfiles/: Appendix-HANK.tex  Appendix-NoSplurge.tex  Appendix-Robustness.tex  Comparing-policies.tex  Conclusion.tex  HAFiscal-titlepage.tex  HAFiscal.bib  HANK.tex  Intro.tex  Model.tex  Parameterization.tex  _path-to-root.ltx  literature.tex
Tables/: Comparison_Splurge_Table.tex  MPC_WQ.tex  Multiplier.tex  Multiplier_SplurgeComp.tex  TABLE_STANDARDIZATION_LOG.md  _path-to-root.ltx  calibration.tex  calibrationRecession.tex  estimBetas.tex  nonTargetedMoments.tex  nonTargetedMoments_wSplZero.tex  template.tex  welfare6-SplurgeComp.tex  welfare6.tex
binder/: environment.yml
dashboard/: DASHBOARD_README.md  app.ipynb  environment.yml  start-dashboard.sh
(+31 files in other folders)
